# P_C-C-Program-Design-Projects

./: README.md
P_Project1/: report.html  report.md
P_Project1/src/: CMakeLists.txt  simple.cpp  source.cpp
P_Project1/time_complexity_test/: CMakeLists.txt  StopWatch.hpp  graph.xlsx  testBigInt.cpp  test_mul.cpp  test_mul.txt  test_mull
P_Project1/time_complexity_test/gmp/: mul  mul.cpp  test_mul  test_mul.cpp
P_Project1/time_complexity_test/handmake/: handmake.cpp
P_Project2/: report.md
P_Project2/java_help/src/: MatrixMultiplication.java  ProcessMat.java
P_Project2/python_help/: diff.ps1  diff.py  matmul.py  random_matrix_generator.py
P_Project2/research/c++泛型研究/: testCppReturn.cpp  testTemplate.cpp
P_Project2/research/cross_platform/: testMacro.cpp  test_s.cpp
P_Project2/research/c语言文件读写研究/: test.txt  testFile.cpp  testScanf.cpp
P_Project2/research/c语言矩阵研究/: testMat.cpp
P_Project2/research/old_learning_code/: main.cpp  matmul_benchmark  matmul_benchmark.cpp  matrix_multiplication.cpp  matrix_multiplication.h  test.txt
P_Project2/research/old_learning_code/版本2/: matrix_multiplication.h  matrix_multiplication.hpp
P_Project2/research/old_learning_code/版本3/: Matrix.cpp  Matrix.h
P_Project2/research/openmp_demo/: openmp.cpp  openmp_linux
P_Project2/research/process/: processData.cpp
P_Project2/research/编码问题研究/: testEncoding.cpp  编码原理.md  编码问题.txt
P_Project2/src/: CMakeLists.txt  excelmat.xlsx  main.cpp  matmul_benchmark  matmul_benchmark.cpp  matrix_multiplication  matrix_multiplication.hpp  run.ps1  run.sh  test.txt  实验数据.xlsx  思路整理.md
P_Project3_C/: .gitignore  CMakeLists.txt  plan.md  report.md  实验数据.xlsx
P_Project3_C/deperacted/: main.c  simd  trivial
P_Project3_C/include/: matmul_simd_openmp.h  matmul_trivial.h  matrix_multiplication.h  util.h
P_Project3_C/lib/: matmul_openblas.lib  matmul_simd.lib  matmul_strassen.lib  matmul_trivial.lib  matrix_multiplication.lib  util.lib
P_Project3_C/lib/CodeAnalysis/: results.sarif
P_Project3_C/python_help/: diff.py
P_Project3_C/sample/: CMakeLists.txt  matadd_benchmark_lab8.c  matmul_benchmark.cpp  testReadWrite.c  test_cmake.c  test_openmp  test_strassen.c
P_Project3_C/source/: CMakeLists.txt
P_Project3_C/source/include/: matmul_openblas.h  matmul_strassen.h  matmul_trivial.h  matrix_multiplication.h  util.h
P_Project3_C/source/lib/: matmul_openblas.lib  matmul_simd.lib  matmul_strassen.lib  matmul_trivial.lib  matrix_multiplication.lib  util.lib
P_Project3_C/source/python_help/: matmul.py
P_Project3_C/source/sample/: CMakeLists.txt  main.c  matmul_benchmark.c  test_openmp.c  test_strassen.c
P_Project3_C/source/src/: CMakeLists.txt  matmul_trivial.c  util.c
P_Project3_C/src/: matmul_openblas.c  matmul_simd_openmp.c  matmul_strassen.c  matmul_trivial.c  matrix_multiplication.c  util.c
P_Project4/: .gitignore  CMakeLists.txt
P_Project4/include/: mat.hpp  sustech_def.hpp  sustech_simd_intrinsics.hpp  types.hpp
P_Project4/project_doc/: CMakeLists.txt  annotated.html - 快捷方式.lnk  report.md
P_Project4/project_doc/old_practice_draft/: FloatMatrix.hpp  floatmat.cpp  rect_ scalar.cpp
P_Project4/project_doc/old_practice_draft/opencv_tutorial_impl/: 0mat.cpp
P_Project4/project_doc/old_practice_draft/不应该这样写/: 类构造.cpp
P_Project4/sample/: CMakeLists.txt  construct.cpp  cpp_language_test.cpp  cv_example.cpp  matmul_benchmark.cpp  project_test.cpp
P_Project4/src/: CMakeLists.txt  matrix.cpp
P_Project5_CNN/: .gitignore  CMakeLists.txt  实现计划.md
P_Project5_CNN/include/: SUSTechDefinitions.h
P_Project5_CNN/include/FaceClassifier/: FaceClassifier.h  FaceClassifier.ipp
P_Project5_CNN/include/Matrix/: ChannelMajorMatrix.ipp  Matrix.h  MatrixConcepts.ipp
P_Project5_CNN/include/NeuronNetwork/: NeuronNetwork.h  NeuronNetwork.ipp
P_Project5_CNN/python_help/: 5.1conv.py  5.3多输入和输出通道.py  5.4池化.py
P_Project5_CNN/sample/: CMakeLists.txt  NetWorkTest.cpp  fc_main.cpp  fc_nn_benchmark.cpp  fc_video_stream.cpp  matrix_test.cpp  test_move.cpp
P_Project5_CNN/sample/IntroductionAIHomework/: cnn_compute.cpp
P_Project5_CNN/sample/experiment/: opencv_conv.cpp
P_Project5_CNN/src/: CMakeLists.txt
